1.33.5
------
- libout123: Add a safeguard to ensure variable-length records from buffer
  communication are always zero-terminated.

1.33.4
------
- mpg123: In terminal control, ignore 7-bit escape sequences to avoid spurious
  actions, e.g. when hitting cursor keys. Inspired by Peter Tirsek.
- ports/cmake: Avoid possibly conflicting use of SIZEOF_OFF_T CMake variable
  when embedding mpg123 with other projects using cmake and different off_t
  semantics. (bug 382)

1.33.3
------
- libmpg123:
-- Fix build with newer toolchain on Android by using __ANDROID__ macro (bug 380).
-- Consolidate and more consistently use .rodata switch in macro.

1.33.2
------
- libmpg123:
-- Do not modify raw ID3v2 data while parsing (bug 379). This used to be fine
   before MPG123_STORE_RAW_ID3 got introduced. Not anymore.

1.33.1
------
- INSTALL updated with hints for Windows, mainly.
- Finally formatted README. Maybe do it in Markdown sometime, as that's
  the fashion.
- build:
-- The ports/cmake only installs manpages for BUILD_PROGRAMS now.
-- The configure gives better hint if pkg-config was missing during generation
   (bug 378).
- mpg123:
-- Replace usage of signal() in terminal code with our sigaction() wrapper
   to fix repeated handling for --sigusr1 and --sigusr2, which got subtly
   broken on Linux + glibc by a feature test macro change in mpg123 1.31.

1.33.0
------
- mpg123
-- Fix printout of filenames at end (convert/limit text encoding).
-- Treat HTTP header encoding as unknown/ASCII and formally convert to UTF-8.
-- Make --continue mode work with --random.
-- Handle possible failure of __wgetmainargs on Windows (bug 375).
- mpg123-id3dump: Fix up command line arg handling for Windows.
- out123
-- Finally give zero exit code when generating sounds, not indicating
   spurious failure.
- build:
-- Use CCASFLAGS for assembler tests, to enable builds that enable instruction
   sets that way (bug 377).